--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,7 @@
     <link rel="canonical" href="{{pageUrl}}" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{{basePath}}/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="{{basePath}}/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="{{basePath}}/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="{{basePath}}/favicon-16x16.png" />
+    <link rel="icon" type="image/svg+xml" href="{{basePath}}/assets/favicon.svg" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
