--- a/templates/post.html
+++ b/templates/post.html
@@ -3,7 +3,7 @@
     {{dateHtml}}
     <div class="post-content">{{content}}</div>
   </div>
-  <aside class="post-toc" data-toc>
+  <aside class="post-toc">
     <div class="post-toc__title">目录</div>
     <nav class="post-toc__body"></nav>
   </aside>
